[package]
name = "sekas-etcd-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "The Sekas API."

[dependencies]
sekas-client = { path = "../../src/client" }
sekas-rock = { path = "../../src/rock" }
sekas-runtime = { path = "../../src/runtime" }

crc32fast.workspace = true
futures.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
tonic-build.workspace = true
protoc-build.workspace = true
