[package]
name = "sekas-api"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "The Sekas API."

[dependencies]
crc32fast.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
tonic-build.workspace = true
protoc-build.workspace = true
