[package]
name = "sekas-client"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "The Sekas API."

[dependencies]
sekas-api = { version = "0.5", path = "../api" }
sekas-parser = { version = "0.5", path = "../parser" }
sekas-rock = { version = "0.5", path = "../rock" }
sekas-runtime = { version = "0.5", path = "../runtime" }
sekas-schema = { version = "0.5", path = "../schema" }

async-stream.workspace = true
crc32fast.workspace = true
derivative.workspace = true
futures.workspace = true
lazy_static.workspace = true
log.workspace = true
paste.workspace = true
prometheus = { workspace = true, features = ["process"] }
prometheus-static-metric.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
ctor = "0.1"
socket2 = "0.4"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
