[package]
name = "sekas-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "The Sekas macro library."

[lib]
proc_macro = true

[dependencies]
sekas-rock = { path = "../rock" }
sekas-runtime = { path = "../runtime" }

quote = "1.0"
syn = "2.0"
