[package]
name = "sekas-rock"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "The Sekas rock lib."

[dependencies]
crc32fast.workspace = true
lazy_static.workspace = true
libc.workspace = true
paste.workspace = true
prost.workspace = true
thiserror.workspace = true
rand.workspace = true
