[package]
name = "sekas-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "The Sekas runtime library."

[dependencies]
sekas-rock = { path = "../rock", version = "0.5" }

async-stream.workspace = true
crc32fast.workspace = true
futures.workspace = true
lazy_static.workspace = true
log.workspace = true
paste.workspace = true
prometheus = { workspace = true, features = ["process"] }
prometheus-static-metric.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
num_cpus.workspace = true
rand.workspace = true
serde.workspace = true

const-str = "0.4"
hyper = "0.14"
libc = "0.2"
pin-project = "1"
tokio-util = { version = "0.7", features = ["time"] }
