[package]
name = "raft-proto"
version = "0.7.0"
authors = ["The TiKV Project Developers"]
edition = "2021"
license = "Apache-2.0"
keywords = ["raft", "distributed-systems", "ha"]
repository = "https://github.com/pingcap/raft-rs"
homepage = "https://github.com/pingcap/raft-rs"
documentation = "https://docs.rs/raft-proto"
description = "Protocol definitions for the rust language implementation of the Raft algorithm."
categories = ["algorithms", "database-implementations"]
build = "build.rs"

[features]
default = ["prost-codec"]
protobuf-codec = ["protobuf-build/protobuf-codec", "bytes", "protobuf/bytes"]
prost-codec = ["protobuf-build/prost-codec", "lazy_static"]

[build-dependencies]
protobuf-build = { version = "0.15.1", default-features = false }

[dependencies]
bytes = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
prost = { workspace = true }
protobuf = { version = "2" }
